--- a/HW3-ChaojieZhang-Copy1.ipynb
+++ b/HW3-ChaojieZhang-Copy1.ipynb
@@ -41,7 +41,9 @@
    "metadata": {
     "collapsed": true
    },
-   "source": []
+   "source": [
+    "The deep learing architecture used in DeepMod is bidirectional RNN with long short-term memory (LSTM) units. There are 3 hidden layers and 7 features input in the network."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +57,15 @@
    "metadata": {
     "collapsed": true
    },
-   "source": []
+   "source": [
+    "There are four layers in the second deep neural network, including an input layer, two hidden layers, and an output layer. \n",
+    "\n",
+    "The input of the network is a 14-value vector.\n",
+    "\n",
+    "The first hidden layer has 100 hidden nodes, and the second hidden layer has 20 hidden nodes. Different layers were connected by full network with dropout (dropout rate = 0.7).\n",
+    "\n",
+    "The output layer has sigmoid activation for outputting final methylation percentage for a CpG site."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +81,11 @@
    "metadata": {
     "collapsed": true
    },
-   "source": []
+   "source": [
+    "Loss Function: cross entropy loss\n",
+    "\n",
+    "Evaluation Criteria: accuracy, precision, recall, AP(weighted mean of precisions achieved at each threshold of predicted methylation percentage), and AUC(area under receiver operating characteristic curve)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +99,9 @@
    "metadata": {
     "collapsed": true
    },
-   "source": []
+   "source": [
+    "The paper applies drop out in the second deep neural network. Other techniques can be L1/L2 regularization."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +152,15 @@
    "metadata": {
     "collapsed": true
    },
-   "source": []
+   "source": [
+    "Disease prediction (multiclass classification task) and medical cost prediction (regression task). \n",
+    "\n",
+    "The paper uses negative log-likelihood loss function for disease prediction and mean-squared-error for cost prediction.\n",
+    "\n",
+    "Evaluation metric of cost prediction: mean absolute error\n",
+    "\n",
+    "Evaluation metric of disease prediction: Recall@k (defined as the number of successfully recalled medical codes from the k recalled codes divided by the number of true positive diagnosis codes)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,7 +172,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "MSAM(AUX) is the best model, MSAM is the second best model.\n",
+    "\n",
+    "MSAM with auxiliary task implement disease prediction, it mitigated the random nature of incurring the medical cost and stabilized the prediction."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -548,6 +576,8 @@
     "df = df.loc[df['medical_specialty'].apply(lambda x : x in top_5_classes),:]\n",
     "df = df.loc[df['transcription'].apply(lambda x : type(x) == str),:]\n",
     "df['label'] = df['medical_specialty'].apply(lambda x : top_5_classes.index(x))\n",
+    "MAX_LEN = 500\n",
+    "df['transcription'] = df['transcription'].apply(lambda x: x[:MAX_LEN] if len(x) > MAX_LEN else x)\n",
     "df.head()"
    ]
   },
@@ -668,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8714\n"
+      "2869\n"
      ]
     }
    ],
@@ -821,15 +851,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -860,7 +881,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -934,7 +957,7 @@
     "        train_acc_return.append(acc)\n",
     "        train_loss_every_epoch = np.average(train_loss_list)\n",
     "        train_loss_return.append(train_loss_every_epoch)\n",
-    "        print('----------Epoch{:2d}/{:2d}----------'.format(epoch,num_epoch))\n",
+    "        print('----------Epoch{:2d}/{:2d}----------'.format(epoch+1,num_epoch))\n",
     "        print('Train set | Loss: {:6.4f} | Accuracy: {:4.2f}% '.format(train_loss_every_epoch, acc))\n",
     "        \n",
     "        # Evaluate after every epochh\n",
@@ -971,17 +994,39 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-6caad2238343>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgru_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRNN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_loss_return\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_acc_return\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mval_loss_return\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mval_acc_return\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgru_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-10-6e9de4c5ebd9>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, val_loader, learning_rate, num_epoch)\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mtrain_loss_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# report performance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/scratch/yz6432/Chaojie/envs/DeepLearning/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    193\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m         \"\"\"\n\u001b[0;32m--> 195\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    196\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/scratch/yz6432/Chaojie/envs/DeepLearning/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------Epoch 1/10----------\n",
+      "Train set | Loss: 1.5220 | Accuracy: 37.00% \n",
+      "Test set | Loss: 1.4823 | AUC: 41.00% | time elapse:  00:00:05\n",
+      "----------Epoch 2/10----------\n",
+      "Train set | Loss: 1.4432 | Accuracy: 42.00% \n",
+      "Test set | Loss: 1.4663 | AUC: 42.00% | time elapse:  00:00:09\n",
+      "----------Epoch 3/10----------\n",
+      "Train set | Loss: 1.3901 | Accuracy: 44.00% \n",
+      "Test set | Loss: 1.4283 | AUC: 42.00% | time elapse:  00:00:12\n",
+      "----------Epoch 4/10----------\n",
+      "Train set | Loss: 1.2914 | Accuracy: 50.00% \n",
+      "Test set | Loss: 1.3183 | AUC: 49.00% | time elapse:  00:00:16\n",
+      "----------Epoch 5/10----------\n",
+      "Train set | Loss: 1.1362 | Accuracy: 57.00% \n",
+      "Test set | Loss: 1.2114 | AUC: 56.00% | time elapse:  00:00:20\n",
+      "----------Epoch 6/10----------\n",
+      "Train set | Loss: 1.0512 | Accuracy: 60.00% \n",
+      "Test set | Loss: 1.1353 | AUC: 58.00% | time elapse:  00:00:24\n",
+      "----------Epoch 7/10----------\n",
+      "Train set | Loss: 1.0068 | Accuracy: 62.00% \n",
+      "Test set | Loss: 1.1383 | AUC: 58.00% | time elapse:  00:00:28\n",
+      "----------Epoch 8/10----------\n",
+      "Train set | Loss: 0.9720 | Accuracy: 63.00% \n",
+      "Test set | Loss: 1.1470 | AUC: 59.00% | time elapse:  00:00:32\n",
+      "----------Epoch 9/10----------\n",
+      "Train set | Loss: 0.9228 | Accuracy: 65.00% \n",
+      "Test set | Loss: 1.1504 | AUC: 56.00% | time elapse:  00:00:36\n",
+      "----------Epoch10/10----------\n",
+      "Train set | Loss: 0.8735 | Accuracy: 68.00% \n",
+      "Test set | Loss: 1.1431 | AUC: 57.00% | time elapse:  00:00:40\n"
      ]
     }
    ],
@@ -1047,12 +1092,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.utils.data import Dataset\n",
+    "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertForSequenceClassification\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "import transformers\n",
+    "\n",
+    "def seed_torch(seed=2020):\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "\n",
+    "PRETRAINED_MODEL_NAME = \"bert-base-uncased\"\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class BERT_Dataset(Dataset):\n",
+    "    def __init__(self, df, tokenizer = tokenizer, label = 'label'):\n",
+    "        self.df = df\n",
+    "        self.len = len(self.df)\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.label = label\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.df)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        text = self.df.loc[idx, 'transcription']\n",
+    "        tokens_query = self.tokenizer.tokenize(text)\n",
+    "        tokens_query = tokens_query[:510]\n",
+    "        word_pieces = [\"[CLS]\"] + tokens_query + [\"[SEP]\"]\n",
+    "        ids = tokenizer.convert_tokens_to_ids(word_pieces)\n",
+    "        tokens_tensor = torch.tensor(ids)\n",
+    "        item_label = self.df.loc[idx, self.label]\n",
+    "        return (tokens_tensor,item_label)\n",
+    "    \n",
+    "def pad_collate(batch):\n",
+    "    (xx, yy) = zip(*batch)\n",
+    "    x_lens = [len(x) for x in xx]\n",
+    "    tokens_tensors = pad_sequence(xx, batch_first=True)\n",
+    "    masks_tensors = torch.zeros(tokens_tensors.shape, dtype=torch.long)\n",
+    "    masks_tensors = masks_tensors.masked_fill(tokens_tensors != 0, 1)\n",
+    "    return torch.as_tensor(tokens_tensors), torch.as_tensor(x_lens), masks_tensors, torch.LongTensor(yy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 32\n",
+    "train_loader = DataLoader(BERT_Dataset(train_data),\n",
+    "                          batch_size=BATCH_SIZE,\n",
+    "                          shuffle=True,\n",
+    "                          collate_fn = pad_collate)\n",
+    "val_loader = DataLoader(BERT_Dataset(val_data),\n",
+    "                         batch_size=BATCH_SIZE,\n",
+    "                         shuffle=True,\n",
+    "                         collate_fn = pad_collate)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1071,6 +1187,109 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def train(model, train_loader=train_loader, val_loader=val_loader, learning_rate=0.001, num_epoch=10):\n",
+    "    start_time = time.time()\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate, weight_decay=10**(-5))\n",
+    "    train_loss_return = []\n",
+    "    train_acc_return = []\n",
+    "    val_loss_return = []\n",
+    "    val_acc_return = []\n",
+    "    \n",
+    "    for epoch in range(num_epoch):\n",
+    "        # Training steps\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        predictions = []\n",
+    "        truths = []\n",
+    "        model.train()\n",
+    "        train_loss_list = []\n",
+    "        for i, (data, data_len, masks, labels) in enumerate(train_loader):\n",
+    "            data,data_len,masks,labels=data.to(device),data_len.to(device),masks.to(device),labels.to(device)\n",
+    "            outputs = model(data, attention_mask = masks)[0]\n",
+    "            pred = outputs.data.max(-1)[1]\n",
+    "            predictions += list(pred.cpu().numpy())\n",
+    "            truths += list(labels.cpu().numpy())\n",
+    "            total += labels.size(0)\n",
+    "            correct += (pred == labels).sum()\n",
+    "            model.zero_grad()\n",
+    "            loss = loss_fn(outputs.squeeze(), labels)\n",
+    "            train_loss_list.append(loss.item())\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "        # report performance\n",
+    "        acc = (100 * correct / total)\n",
+    "        train_acc_return.append(acc)\n",
+    "        train_loss_every_epoch = np.average(train_loss_list)\n",
+    "        train_loss_return.append(train_loss_every_epoch)\n",
+    "        print('----------Epoch{:2d}/{:2d}----------'.format(epoch,num_epoch))\n",
+    "        print('Train set | Loss: {:6.4f} | Accuracy: {:4.2f}% '.format(train_loss_every_epoch, acc))\n",
+    "        \n",
+    "        # Evaluate after every epochh\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        model.eval()\n",
+    "        predictions = []\n",
+    "        truths = []\n",
+    "        val_loss_list = []\n",
+    "        with torch.no_grad():\n",
+    "            for i, (data, data_len, masks, labels) in enumerate(val_loader):\n",
+    "                data,data_len,masks,labels=data.to(device),data_len.to(device),masks.to(device),labels.to(device)\n",
+    "                outputs = model(data, attention_mask = masks)[0]\n",
+    "                loss = loss_fn(outputs.squeeze(), labels)\n",
+    "                val_loss_list.append(loss.item())\n",
+    "                pred = outputs.data.max(-1)[1]\n",
+    "                predictions += list(pred.cpu().numpy())\n",
+    "                truths += list(labels.cpu().numpy())\n",
+    "                total += labels.size(0)\n",
+    "                correct += (pred == labels).sum()\n",
+    "            # report performance\n",
+    "            acc = (100 * correct / total)\n",
+    "            val_acc_return.append(acc)\n",
+    "            val_loss_every_epoch = np.average(val_loss_list)\n",
+    "            val_loss_return.append(val_loss_every_epoch)\n",
+    "            elapse = time.strftime('%H:%M:%S', time.gmtime(int((time.time() - start_time))))\n",
+    "            print('Test set | Loss: {:6.4f} | AUC: {:4.2f}% | time elapse: {:>9}'.format(val_loss_every_epoch, acc,elapse))\n",
+    "    return model,train_loss_return,train_acc_return,val_loss_return,val_acc_return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model_BERT = transformers.modeling_bert.BertForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(model_BERT)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1129,24 +1348,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": []
   }
  ],
